--- a/Frontend/app/constants/config.json
+++ b/Frontend/app/constants/config.json
@@ -9,5 +9,11 @@
         "factory": {
             "address": "0x698c5DeDfe31d9addEa4d914Cd590A8757a4679D"
         }
+    },
+
+    "656476": {
+        "factory": {
+            "address": "0x3701126Fc824130A574EEdAa52D58C69974F3B6B"
+        }
     }
 }
